# anagrams

./: .gitignore  CMakeLists.txt  README.md  anagrams.qrc
src/: about.cpp  about.h  about.ui  anagramfinder.cpp  anagramfinder.h  anagramfinder.ui  anagramfinderthread.cpp  anagramfinderthread.h  anagrams.h  dictionaryloader.cpp  dictionaryloader.h  dictionaryloader.ui  longestpaths.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  nonrejectabledialog.cpp  nonrejectabledialog.h  options.cpp  options.h  options.ui  searchresultlabel.cpp  searchresultlabel.h  searchresults.cpp  searchresults.h  settings.cpp  settings.h  settingsbase.cpp  settingsbase.h  utils.cpp  utils.h
